--- a/3-Classes/Introduction-to-classes.ipynb
+++ b/3-Classes/Introduction-to-classes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ee892f9a",
+   "id": "ef2419e0",
    "metadata": {},
    "source": [
     "# Introduction to classes\n",
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3a8d1d94",
+   "execution_count": null,
+   "id": "5ccc9bdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,6 @@
     "    2: 6,\n",
     "    3: 8\n",
     "}\n",
-    "\n",
     "\n",
     "volume = {\n",
     "    0: 10,\n",
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f53bba4c",
+   "id": "e7156826",
    "metadata": {},
    "source": [
     "Now, if one wants to add a cell to the list they need to make sure to update all the dictionaries together:"
@@ -70,8 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "4b879f99",
+   "execution_count": null,
+   "id": "1a8b203b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,26 +82,87 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb60b5a2",
+   "id": "32bd3c6a",
    "metadata": {},
    "source": [
-    "Instead of carrying all the dictionaries we can rather create a class `Cell` that will have as attribute the surface, volume and position:"
+    "Another way might be like that:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c95b47e4",
+   "execution_count": null,
+   "id": "a9194209",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Cell:\n",
-    "    pass"
+    "cells = {}\n",
+    "cells[0] = {}\n",
+    "cells[0]['surface'] = 2\n",
+    "cells[0]['volume'] = 10\n",
+    "cells[0]['position'] = [1, 2]\n",
+    "...\n",
+    "print(cells)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7075f92e",
+   "id": "e8a14a10",
+   "metadata": {},
+   "source": [
+    "And to add a cell:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bae68dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cells[1] = {}\n",
+    "cells[1]['surface'] = 4\n",
+    "cells[1]['volume'] = 20\n",
+    "cells[1]['position'] = [2, 5]\n",
+    "print(cells)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f72addd",
+   "metadata": {},
+   "source": [
+    "Instead of carrying all the dictionaries we can rather create a class `Cell` that will have as attribute the surface, volume and position."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62a1db5f",
+   "metadata": {},
+   "source": [
+    "## How to create a class\n",
+    "\n",
+    "The syntax to create a class is the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa473956",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cell:\n",
+    "    '''\n",
+    "    <statment-1>\n",
+    "    ...\n",
+    "    <statment-n>\n",
+    "    '''\n",
+    "    ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5334c7b4",
    "metadata": {},
    "source": [
     "We now have a class named `Cell`. You can create/instantiate a new object the following way:"
@@ -110,8 +170,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6ed7af30",
+   "execution_count": null,
+   "id": "2aa27663",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,16 +180,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a407d38",
+   "id": "834ec8cf",
    "metadata": {},
    "source": [
-    "We can set values for the previously mentionned measurements the following way:"
+    "We can set some values/attributes of the created object the following way:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a646e6e2",
+   "execution_count": null,
+   "id": "f2ef3810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,25 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ffbfec8a",
+   "execution_count": null,
+   "id": "a1ac1edc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 50 [2, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(c.surface, c.volume, c.position)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9a421ea0",
+   "id": "bd3d69b0",
    "metadata": {},
    "source": [
     "Functions can also be defined for classes (they are called methods of the class):"
@@ -166,8 +218,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "fa600f34",
+   "execution_count": null,
+   "id": "6e5c3e94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "525a6016",
+   "id": "d14477f3",
    "metadata": {},
    "source": [
     "Note the `self` keyword that refers to the object itself and therefore allows to access the attributes of the said object."
@@ -187,29 +239,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "2717826d",
+   "execution_count": null,
+   "id": "0101a36f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.563429036687326\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = Cell()\n",
     "c.surface = 10\n",
     "c.volume = 50\n",
-    "c.position = [2, 1]\n",
     "print(c.sphericity())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2970c567",
+   "id": "fb5cb202",
    "metadata": {},
    "source": [
     "Note that in that example, if you have not specified the surface and the volume before calling the class method, it will crash:"
@@ -217,19 +260,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "274644a2",
+   "execution_count": null,
+   "id": "5113026e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the error was the following:\n",
-      "'Cell' object has no attribute 'volume'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = Cell()\n",
     "try:\n",
@@ -241,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0afe023",
+   "id": "d4316643",
    "metadata": {},
    "source": [
     "To check whether it is possible to run the method, one can do the following:"
@@ -249,8 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "75647555",
+   "execution_count": null,
+   "id": "1cdd2d55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,29 +304,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3cce4f88",
+   "execution_count": null,
+   "id": "54c03fee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/78/4tskqbhd46jg4r1qcv_tqs9c0000gn/T/ipykernel_63722/1356701579.py:11: UserWarning: the volume and/or surface was not defined, returning 0\n",
-      "  warnings.warn('the volume and/or surface was not defined, returning 0')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = Cell()\n",
     "c.sphericity()"
@@ -300,21 +315,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "ad64e944",
+   "execution_count": null,
+   "id": "61e5ece8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8059959770082347"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c.volume = 1\n",
     "c.surface = 6\n",
@@ -323,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "880c1ee7",
+   "id": "a1d34e60",
    "metadata": {},
    "source": [
     "The equivalent without a class would be something like that:"
@@ -331,8 +335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "0b42ebdd",
+   "execution_count": null,
+   "id": "0e2d1c1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f4f166e",
+   "id": "653247e7",
    "metadata": {},
    "source": [
     "Where the `volume` and `surface` would have been needed as parameters of the function. A typical call would have been like that:"
@@ -350,21 +354,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1a3e62cc",
+   "execution_count": null,
+   "id": "3d998c0e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8.907943701227307"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "curr_cell = 1\n",
     "sphericity(volume[curr_cell], surface[curr_cell])"
@@ -372,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c69f559",
+   "id": "5d81c54f",
    "metadata": {},
    "source": [
     "## Initializing a class\n",
@@ -381,8 +374,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "3d222dd1",
+   "execution_count": null,
+   "id": "a2b09fb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f488a40",
+   "id": "064cb33a",
    "metadata": {},
    "source": [
     "It is now possible to call the class like that:"
@@ -406,18 +399,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "4fa12e9f",
+   "execution_count": null,
+   "id": "8103cea8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 10 [2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = Cell(surface=5, volume=10, position=[2, 3])\n",
     "print(c.surface, c.volume, c.position)"
@@ -425,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b72c2724",
+   "id": "4dfb85e0",
    "metadata": {},
    "source": [
     "## Private attribute/methods\n",
@@ -434,17 +419,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "a3cd51d7",
+   "execution_count": null,
+   "id": "3cc5f824",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Cell:\n",
-    "    def __hidden_function(self):\n",
-    "        print(\"I'm hidden\")\n",
+    "    def __hidden_method(self):\n",
+    "        print(\"I'm the hidden method\")\n",
     "    \n",
     "    def call_hidden(self):\n",
-    "        self.__hidden_function()\n",
+    "        self.__hidden_method()\n",
+    "    \n",
+    "    def print_hidden(self):\n",
+    "        print(self.__hidden_attr)\n",
     "    \n",
     "    def sphericity(self):\n",
     "        return pi**(1./3)*(6*self.volume)**(2./3)/self.surface\n",
@@ -452,38 +440,37 @@
     "    def __init__(self, surface=None, volume=None, position=[None, None]):\n",
     "        self.surface = surface\n",
     "        self.volume = volume\n",
-    "        self.position = position"
+    "        self.position = position\n",
+    "        self.__hidden_attr = \"I'm the hidden attribute\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "c6595c50",
+   "execution_count": null,
+   "id": "462e5414",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I'm hidden\n",
-      "The error was:\n",
-      "'Cell' object has no attribute '__hidden_function'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = Cell(6, 1, [0, 0])\n",
     "c.call_hidden()\n",
     "try:\n",
     "    c.__hidden_function()\n",
     "except Exception as e:\n",
-    "    print('The error was:')\n",
+    "    print('\\nThe error was:')\n",
+    "    print(e)\n",
+    "\n",
+    "print()\n",
+    "c.print_hidden()\n",
+    "try:\n",
+    "    print(c.__hidden_attr)\n",
+    "except Exception as e:\n",
+    "    print('\\nThe error was:')\n",
     "    print(e)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c29b1ff2",
+   "id": "ac299996",
    "metadata": {},
    "source": [
     "## Rewritting the \"basic\" functions\n",
@@ -492,8 +479,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "89006b60",
+   "execution_count": null,
+   "id": "ab2b503d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,25 +503,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "dfd02c58",
+   "execution_count": null,
+   "id": "13df3ca2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I am a cell with:\n",
-      "\tVolume  : 1\n",
-      "\tSurface : 6\n",
-      "\tPosition: [0, 0]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = Cell(6, 1, [0, 0])\n",
     "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa61d775",
+   "metadata": {},
+   "source": [
+    "## Example of class\n",
+    "A class for [Conway's game of life automaton](https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76a3baf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.signal import convolve2d\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "class GameOfLife:\n",
+    "    kernel = np.array([\n",
+    "        [1, 1, 1],\n",
+    "        [1, 0, 1],\n",
+    "        [1, 1, 1]\n",
+    "    ])\n",
+    "    def iteration(self):\n",
+    "        # Counting the neighbors\n",
+    "        nb_neighbs = convolve2d(self.current_state, self.kernel, boundary='wrap', mode='same')\n",
+    "        \n",
+    "        # Checking the rules:\n",
+    "        #   Any live cell with two or three live neighbours survives.\n",
+    "        #   Any dead cell with three live neighbours becomes a live cell.\n",
+    "        #   All other live cells die in the next generation. Similarly, all other dead cells stay dead.\n",
+    "        new_live  = ((nb_neighbs == 3) & (~self.current_state))\n",
+    "        new_live |= ((nb_neighbs == 3) | (nb_neighbs == 2)) & self.current_state\n",
+    "        self.current_state = new_live\n",
+    "\n",
+    "    def plot(self):\n",
+    "        fig, ax = plt.subplots()\n",
+    "        ax.imshow(self.current_state, interpolation='nearest')\n",
+    "        ax.set_xticks([])\n",
+    "        ax.set_yticks([])\n",
+    "        plt.show()\n",
+    "    \n",
+    "    def __init__(self, initial_state):\n",
+    "        self.initial_state = initial_state\n",
+    "        self.current_state = initial_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0429ec11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_state = np.array(\n",
+    "[\n",
+    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
+    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0],\n",
+    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0],\n",
+    "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+    "]\n",
+    ")\n",
+    "plt.imshow(init_state, interpolation='nearest')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cf9039c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game_of_life = MyModel(init_state)\n",
+    "game_of_life.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d083f077",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    game_of_life.iteration()\n",
+    "    game_of_life.plot()"
    ]
   }
  ],
