--- a/3-Classes/Introduction-to-classes.ipynb
+++ b/3-Classes/Introduction-to-classes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "519b6fb9",
+   "id": "244d3c3f",
    "metadata": {},
    "source": [
     "# Introduction to classes\n",
@@ -20,6 +20,7 @@
     "As mentioned before, classes are:\n",
     "1. a different (better?) way to organise your code.\n",
     "2. a way of storing attributes/parameters more efficiently\n",
+    "3. a way aggregate data and methods together\n",
     "\n",
     "For example, you need to work with cells that have several metrics attached to them. Let say surface, volume and position. Without a class one way to maintain a list of such cells could be the following:"
    ]
@@ -27,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "818520b3",
+   "id": "1ee0149c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,8 +40,8 @@
     "surface = {\n",
     "    0: 2,\n",
     "    1: 4,\n",
-    "    2: 6,\n",
-    "    3: 8\n",
+    "    4: 6,\n",
+    "    5: 8\n",
     "}\n",
     "\n",
     "volume = {\n",
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "815f7410",
+   "id": "d2ebc1fa",
    "metadata": {},
    "source": [
     "Now, if one wants to add a cell to the list they need to make sure to update all the dictionaries together:"
@@ -70,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63a9f001",
+   "id": "5969fdba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "836ad6c2",
+   "id": "e4630136",
    "metadata": {},
    "source": [
     "Another way might be like that:"
@@ -91,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfa92b36",
+   "id": "af318fd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b86a81d",
+   "id": "9fd27b32",
    "metadata": {},
    "source": [
     "And to add a cell:"
@@ -115,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f3baa14",
+   "id": "cfa87d7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "970041a5",
+   "id": "b0b11bf3",
    "metadata": {},
    "source": [
     "Instead of carrying all the dictionaries we can rather create a class `Cell` that will have as attribute the surface, volume and position."
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbef819d",
+   "id": "add69b79",
    "metadata": {},
    "source": [
     "## How to create a class\n",
@@ -147,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d818f162",
+   "id": "f071f60b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63e71172",
+   "id": "cf03f675",
    "metadata": {},
    "source": [
     "We now have a class named `Cell`. You can create/instantiate a new object the following way:"
@@ -171,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53812936",
+   "id": "90196fb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1893409c",
+   "id": "05cc174b",
    "metadata": {},
    "source": [
     "We can set some values/attributes of the created object the following way:"
@@ -189,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a1cd7f",
+   "id": "a7b945a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c71573b0",
+   "id": "6e6599a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,8 +210,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbf2a7a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test():\n",
+    "    print('hello world')\n",
+    "c.hello_world = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdab447c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.hello_world()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "06d0cb85",
+   "id": "db6bc398",
    "metadata": {},
    "source": [
     "Functions can also be defined for classes (they are called methods of the class):"
@@ -219,19 +242,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8bb1641",
+   "id": "eaebb230",
    "metadata": {},
    "outputs": [],
    "source": [
     "pi = 3.14159265358979323846\n",
+    "\n",
     "class Cell:\n",
+    "    \n",
     "    def sphericity(self):\n",
     "        return pi**(1./3)*(6*self.volume)**(2./3)/self.surface"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7809f4e6",
+   "id": "ff97d590",
    "metadata": {},
    "source": [
     "Note the `self` keyword that refers to the object itself and therefore allows to access the attributes of the said object."
@@ -240,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9c2d621",
+   "id": "42f949be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36fbf4c5",
+   "id": "175aed7d",
    "metadata": {},
    "source": [
     "Note that in that example, if you have not specified the surface and the volume before calling the class method, it will crash:"
@@ -261,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72074bb6",
+   "id": "1c2140a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "682b1ad8",
+   "id": "3d3db678",
    "metadata": {},
    "source": [
     "To check whether it is possible to run the method, one can do the following:"
@@ -284,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b17cf447",
+   "id": "5f1eb179",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2542b616",
+   "id": "efc53bc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cc06d08",
+   "id": "ee8bc29f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6ab494b",
+   "id": "c6535933",
    "metadata": {},
    "source": [
     "The equivalent without a class would be something like that:"
@@ -336,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58c137bd",
+   "id": "41fb1cdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "314bf5aa",
+   "id": "e6aca357",
    "metadata": {},
    "source": [
     "Where the `volume` and `surface` would have been needed as parameters of the function. A typical call would have been like that:"
@@ -355,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6713ea77",
+   "id": "cfee5727",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1a0b53c",
+   "id": "eee73fcc",
    "metadata": {},
    "source": [
     "## Initializing a class\n",
@@ -375,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63d26916",
+   "id": "4d4fe661",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +408,7 @@
     "    def sphericity(self):\n",
     "        return pi**(1./3)*(6*self.volume)**(2./3)/self.surface\n",
     "    \n",
-    "    def __init__(self, surface=None, volume=None, position=[None, None]):\n",
+    "    def __init__(self, surface, volume, position=[None, None]):\n",
     "        self.surface = surface\n",
     "        self.volume = volume\n",
     "        self.position = position"
@@ -391,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd828a6f",
+   "id": "1e897707",
    "metadata": {},
    "source": [
     "It is now possible to call the class like that:"
@@ -400,17 +425,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3abc4e61",
+   "id": "3ef526ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "c = Cell(surface=5, volume=10, position=[2, 3])\n",
-    "print(c.surface, c.volume, c.position)"
+    "print(c.surface, c.volume, c.position)\n",
+    "c.sphericity()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7bfd81b6",
+   "id": "a24967ec",
    "metadata": {},
    "source": [
     "## Private attribute/methods\n",
@@ -420,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a88feab",
+   "id": "88c93033",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +458,7 @@
     "        self.__hidden_method()\n",
     "    \n",
     "    def print_hidden(self):\n",
-    "        print(self.__hidden_attr)\n",
+    "        print(self.__hidden_attr__)\n",
     "    \n",
     "    def sphericity(self):\n",
     "        return pi**(1./3)*(6*self.volume)**(2./3)/self.surface\n",
@@ -441,13 +467,13 @@
     "        self.surface = surface\n",
     "        self.volume = volume\n",
     "        self.position = position\n",
-    "        self.__hidden_attr = \"I'm the hidden attribute\""
+    "        self.__hidden_attr__ = \"I'm the hidden attribute\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "303f8fb3",
+   "id": "1818daba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +488,7 @@
     "print()\n",
     "c.print_hidden()\n",
     "try:\n",
-    "    print(c.__hidden_attr)\n",
+    "    print(c.__hidden_attr__)\n",
     "except Exception as e:\n",
     "    print('\\nThe error was:')\n",
     "    print(e)"
@@ -470,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74bc6b7f",
+   "id": "75762844",
    "metadata": {},
    "source": [
     "## Rewritting the \"basic\" functions\n",
@@ -480,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9c99677",
+   "id": "40c21edc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ad77f16",
+   "id": "8f7c72bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "427e5574",
+   "id": "e554e550",
    "metadata": {},
    "source": [
     "## Example of class\n",
@@ -524,13 +550,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c080c5f",
+   "id": "d34eb09c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 1\n",
+    "a += 1 # a = a + 1\n",
+    "a *= 2\n",
+    "# | # bitwise or\n",
+    "3 | 4\n",
+    "# 4 = 1 0 0 ; 3 = 0 1 1\n",
+    "# 4 | 3 = 1 1 1 = 7\n",
+    "tmp  = np.array([0, 0, 0, 1]) \n",
+    "tmp &= np.array([0, 0, 0, 0])\n",
+    "tmp &= np.array([1, 0, 0, 0])\n",
+    "tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a08bc05f",
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.signal import convolve2d\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "class GameOfLife:\n",
     "    kernel = np.array([\n",
     "        [1, 1, 1],\n",
@@ -545,8 +592,8 @@
     "        #   Any live cell with two or three live neighbours survives.\n",
     "        #   Any dead cell with three live neighbours becomes a live cell.\n",
     "        #   All other live cells die in the next generation. Similarly, all other dead cells stay dead.\n",
-    "        new_live  = ((nb_neighbs == 3) & (~self.current_state))\n",
-    "        new_live |= ((nb_neighbs == 3) | (nb_neighbs == 2)) & self.current_state\n",
+    "        new_live  = ((nb_neighbs == 3) | (nb_neighbs == 2)) & self.current_state\n",
+    "        new_live |= ((nb_neighbs == 3) & (~self.current_state))\n",
     "        self.current_state = new_live\n",
     "\n",
     "    def plot(self):\n",
@@ -564,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "407c4e17",
+   "id": "4f83ce50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,24 +645,93 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bad359b1",
+   "id": "806ffb4c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "game_of_life = MyModel(init_state)\n",
+    "game_of_life = GameOfLife(init_state)\n",
     "game_of_life.plot()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "debdb7a9",
-   "metadata": {},
+   "id": "d2b99926",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "for i in range(10):\n",
     "    game_of_life.iteration()\n",
     "    game_of_life.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1187077",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4535bd47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.signal import convolve2d\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "class GameOfLife:\n",
+    "    kernel = np.array([\n",
+    "        [1, 1, 1],\n",
+    "        [1, 0, 1],\n",
+    "        [1, 1, 1]\n",
+    "    ])\n",
+    "    def iteration(self):\n",
+    "        # Counting the neighbors\n",
+    "        nb_neighbs = convolve2d(self.current_state, self.kernel, boundary='wrap', mode='same')\n",
+    "        \n",
+    "        # Checking the rules:\n",
+    "        #   Any live cell with two or three live neighbours survives.\n",
+    "        #   Any dead cell with three live neighbours becomes a live cell.\n",
+    "        #   All other live cells die in the next generation. Similarly, all other dead cells stay dead.\n",
+    "        new_live = np.zeros_like(nb_neighbs, dtype=bool)\n",
+    "        for th in self.th_live:\n",
+    "            new_live |= (nb_neighbs == th) & self.current_state\n",
+    "        for th in self.th_dead:\n",
+    "            new_live |= ((nb_neighbs == 3) & (~self.current_state))\n",
+    "        self.current_state = new_live\n",
+    "\n",
+    "    def plot(self):\n",
+    "        fig, ax = plt.subplots()\n",
+    "        ax.imshow(self.current_state, interpolation='nearest')\n",
+    "        ax.set_xticks([])\n",
+    "        ax.set_yticks([])\n",
+    "        plt.show()\n",
+    "    \n",
+    "    def __init__(self, initial_state, th_live=[2, 3], th_dead=[3]):\n",
+    "        self.initial_state = initial_state.astype(bool)\n",
+    "        self.current_state = initial_state.astype(bool)\n",
+    "        self.th_live = th_live\n",
+    "        self.th_dead = th_dead"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b408124d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game_of_life2 = GameOfLife(init_state, th_live=[3, 4], th_dead=[1, 2, 3])\n",
+    "for i in range(10):\n",
+    "    game_of_life2.iteration()\n",
+    "    game_of_life2.plot()"
    ]
   }
  ],
