--- a/3-Classes/Introduction-to-classes.ipynb
+++ b/3-Classes/Introduction-to-classes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "244d3c3f",
+   "id": "1636611c",
    "metadata": {},
    "source": [
     "# Introduction to classes\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ee0149c",
+   "id": "9809ec18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2ebc1fa",
+   "id": "e29a02d0",
    "metadata": {},
    "source": [
     "Now, if one wants to add a cell to the list they need to make sure to update all the dictionaries together:"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5969fdba",
+   "id": "ad577020",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4630136",
+   "id": "9b354e56",
    "metadata": {},
    "source": [
     "Another way might be like that:"
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af318fd4",
+   "id": "0ac7d778",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fd27b32",
+   "id": "8d6dc847",
    "metadata": {},
    "source": [
     "And to add a cell:"
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfa87d7a",
+   "id": "c8ad0775",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0b11bf3",
+   "id": "07b6c717",
    "metadata": {},
    "source": [
     "Instead of carrying all the dictionaries we can rather create a class `Cell` that will have as attribute the surface, volume and position."
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "add69b79",
+   "id": "de457767",
    "metadata": {},
    "source": [
     "## How to create a class\n",
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f071f60b",
+   "id": "bbfe6de0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf03f675",
+   "id": "c3452bd8",
    "metadata": {},
    "source": [
     "We now have a class named `Cell`. You can create/instantiate a new object the following way:"
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90196fb8",
+   "id": "bed0acb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05cc174b",
+   "id": "4289459c",
    "metadata": {},
    "source": [
     "We can set some values/attributes of the created object the following way:"
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7b945a9",
+   "id": "16f3529d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e6599a6",
+   "id": "7dafff24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf2a7a0",
+   "id": "7f75189a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdab447c",
+   "id": "2ed137ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db6bc398",
+   "id": "afcf9a1c",
    "metadata": {},
    "source": [
     "Functions can also be defined for classes (they are called methods of the class):"
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaebb230",
+   "id": "d4477464",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff97d590",
+   "id": "35e2d965",
    "metadata": {},
    "source": [
     "Note the `self` keyword that refers to the object itself and therefore allows to access the attributes of the said object."
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42f949be",
+   "id": "787cd170",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "175aed7d",
+   "id": "a56f98b5",
    "metadata": {},
    "source": [
     "Note that in that example, if you have not specified the surface and the volume before calling the class method, it will crash:"
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c2140a9",
+   "id": "b16ce3b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d3db678",
+   "id": "7aa57040",
    "metadata": {},
    "source": [
     "To check whether it is possible to run the method, one can do the following:"
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f1eb179",
+   "id": "abacbba2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efc53bc2",
+   "id": "1b7ec5e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee8bc29f",
+   "id": "48d062aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6535933",
+   "id": "c85d595e",
    "metadata": {},
    "source": [
     "The equivalent without a class would be something like that:"
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41fb1cdc",
+   "id": "6b28ce99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6aca357",
+   "id": "2b10bbcc",
    "metadata": {},
    "source": [
     "Where the `volume` and `surface` would have been needed as parameters of the function. A typical call would have been like that:"
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfee5727",
+   "id": "b1b0f9a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eee73fcc",
+   "id": "e8ec221d",
    "metadata": {},
    "source": [
     "## Initializing a class\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d4fe661",
+   "id": "76e475c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e897707",
+   "id": "678cd660",
    "metadata": {},
    "source": [
     "It is now possible to call the class like that:"
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ef526ca",
+   "id": "8ad7fba0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a24967ec",
+   "id": "cfa0978e",
    "metadata": {},
    "source": [
     "## Private attribute/methods\n",
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88c93033",
+   "id": "61b783aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1818daba",
+   "id": "66806ef8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75762844",
+   "id": "cbafaf94",
    "metadata": {},
    "source": [
     "## Rewritting the \"basic\" functions\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40c21edc",
+   "id": "061b1a1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f7c72bb",
+   "id": "0d891955",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e554e550",
+   "id": "dbb72cfc",
    "metadata": {},
    "source": [
     "## Example of class\n",
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d34eb09c",
+   "id": "f2ac385c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a08bc05f",
+   "id": "20d0ec3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f83ce50",
+   "id": "29a24901",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "806ffb4c",
+   "id": "14ab7f8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2b99926",
+   "id": "31ab6ca4",
    "metadata": {
     "scrolled": true
    },
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1187077",
+   "id": "4a36d726",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4535bd47",
+   "id": "9a4bba0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
     "        for th in self.th_live:\n",
     "            new_live |= (nb_neighbs == th) & self.current_state\n",
     "        for th in self.th_dead:\n",
-    "            new_live |= ((nb_neighbs == 3) & (~self.current_state))\n",
+    "            new_live |= ((nb_neighbs == th) & (~self.current_state))\n",
     "        self.current_state = new_live\n",
     "\n",
     "    def plot(self):\n",
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b408124d",
+   "id": "227dd1e2",
    "metadata": {},
    "outputs": [],
    "source": [
