changing delta by nable

--- a/1-Introduction-to-Python/0-Introduction.ipynb
+++ b/1-Introduction-to-Python/0-Introduction.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "521b2194",
    "metadata": {},
@@ -20,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "45fc64df",
    "metadata": {},
@@ -28,6 +30,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c0deffdb",
    "metadata": {},
@@ -44,6 +47,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c8e75217",
    "metadata": {},
@@ -57,6 +61,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2b150799",
    "metadata": {},
@@ -131,6 +136,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fa350e1f",
    "metadata": {},
@@ -163,16 +169,16 @@
     "> These interactions can be modelled multiple ways.\n",
     "> We decided here to use the [FitzHugh–Nagumo model](https://en.wikipedia.org/wiki/FitzHugh%E2%80%93Nagumo_model) (for no particular reason) resulting in the following equations:\n",
     ">\n",
-    "> $\\frac{\\delta a}{\\delta t} = \\mu_a\\Delta a + a - a^3 - i + k$ [1]\n",
+    "> $\\frac{\\delta a}{\\delta t} = \\mu_a\\nabla^2 a + a - a^3 - i + k$ [1]\n",
     ">\n",
-    "> $\\tau \\frac{\\delta i}{\\delta t} = \\mu_i\\Delta i + a - i$ [2]\n",
+    "> $\\tau \\frac{\\delta i}{\\delta t} = \\mu_i\\nabla^2 i + a - i$ [2]\n",
     ">\n",
     "> These are partial differential equations that represent the change of concentration of $A$ ($\\delta a$) or $I$ ($\\delta i$) in time ($\\delta t$).\n",
     ">\n",
-    "> In equation [1], $\\Delta a$ is the potential diffusion $A$ and $\\mu_a$ is the diffusion coefficient.\n",
+    "> In equation [1], $\\nabla^2 a$ is the potential diffusion $A$ and $\\mu_a$ is the diffusion coefficient.\n",
     "> $+ a$ is the auto-activation of $A$, $-a^3$ is the degradation, $-i$ is the inhibition from $I$ and $k$ is a constant to determine whether $A$ acts as a source ($0<k$), a sink ($k<0$) or is neutral ($k=0$).\n",
     ">\n",
-    "> In equation [2], $\\Delta i$ is the potential diffusion of $I$ and $\\mu_i$ is the diffusion coefficient.\n",
+    "> In equation [2], $\\nabla^2 i$ is the potential diffusion of $I$ and $\\mu_i$ is the diffusion coefficient.\n",
     "> $+a$ is the activation from $A$, $-i$ is the degradation and $\\tau$ allows to modulate the amplitude of change of concentration of $I$ compared to the one of the activator $A$.\n",
     "\n",
     "It is important to know that to model the previous network it is necessary to decide on some values, the parameters of the model:\n",
