--- a/1-Introduction-to-Python/6-2-Adding-lateral-diffusion.ipynb
+++ b/1-Introduction-to-Python/6-2-Adding-lateral-diffusion.ipynb
@@ -27,18 +27,18 @@
     "### 5.2 Adding lateral diffusion\n",
     "Now, we are going to start doing real 1D!\n",
     "\n",
-    "The idea is that, up to now, we are able to have a row of cells that are acting next to each other but independently. We want to add to that the diffusion process of the Turing patterns: the $\\mu_a\\Delta a$ and $\\mu_i\\Delta i$.\n",
+    "The idea is that, up to now, we are able to have a row of cells that are acting next to each other but independently. We want to add to that the diffusion process of the Turing patterns: the $\\mu_a\\nabla^2 a$ and $\\mu_i\\nabla^2 i$.\n",
     "\n",
     "We model the lateral diffusion for a given cell as simply as possible. The diffusion is a proportion (the parameters $\\mu_a$ and $\\mu_i$) of concentration that a cell receive from its direct neighbours minus what that cell gives to its neighbour, which is twice a given proportion of its own concentration (the proportion being $\\mu_a$ for the activator and $\\mu_i$ for the inhibitor).\n",
     "\n",
     "Now, if $a_x$ is the activator concentration in the cell at the position $x$, we can formalise the previous sentence as follow:\n",
     "$$\n",
-    "\\mu_a\\Delta a_x = \\mu_a \\frac{a_{x+\\delta x} + a_{x-\\delta x} - 2a_x}{\\delta x}\n",
+    "\\mu_a\\nabla^2 a_x = \\mu_a \\frac{a_{x+\\delta x} + a_{x-\\delta x} - 2a_x}{\\delta x}\n",
     "$$\n",
     "\n",
     "Therefore, after diffusion for a given time $\\delta t$, the concentration $a_x$ is:\n",
     "$$\n",
-    "a_{x, t+\\delta t} = a_{x, t} + \\delta t\\mu_a\\Delta a_{x,t} = a_{x,t} + \\delta t\\mu_a \\frac{a_{x+\\delta x, t} + a_{x-\\delta x, t} - 2a_{x, t}}{\\delta x}\n",
+    "a_{x, t+\\delta t} = a_{x, t} + \\delta t\\mu_a\\nabla^2 a_{x,t} = a_{x,t} + \\delta t\\mu_a \\frac{a_{x+\\delta x, t} + a_{x-\\delta x, t} - 2a_{x, t}}{\\delta x}\n",
     "$$\n",
     "We tried to explain that with the following figure:\n",
     "<img src=\"Images/Diffusion.png\" alt=\"Diffusion\" width=\"500\"/>"
