--- a/1-Introduction-to-Python/0-Introduction.ipynb
+++ b/1-Introduction-to-Python/0-Introduction.ipynb
@@ -50,13 +50,22 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "c8e75217",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "### 0.1 Goal of this course\n",
-    "This course aims at teaching the basics of coding using reaction diffusion simulations as a support, more specifically the Turing patterns.\n",
-    "Understanding the mathematics or the biology behind the Turing patterns is not necessary but it might help to understand better what is happening behind the hood.\n",
+    "This course aims at teaching the basics of coding using reaction-diffusion simulations as a support.\n",
+    "Understanding the mathematics or the biology behind reaction-diffusion simulations is not necessary but it might help to understand better what is happening under the hood.\n",
     "\n",
-    "At the end of the course, we would like you to be able to write small pieces of code to do basic data analysis.\n",
+    "At the end of this course, we would like you to be able to understand better how to write small pieces of code to do basic data analysis but also to develop more complex, installable pieces of code.\n",
+    "In order to follow this course, it is necessary to have basic knowledge of coding in python.\n",
+    "\n",
+    "Knowledge conditional statements, \n",
     "No computation level is required though it is good to keep in mind that at the time being, this notebook alone might not be enough: the teachers are still necessary (unfortunately?) to introduce the concepts and to help answer the potential questions."
    ]
   },
@@ -216,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
